# ppc-ill-example

./: Cargo.toml  README.md  powerpc-none-eabi.json  wii.ld
.config/: cargo
src/: main.rs
