[package]
name = "ppc_ill"
version = "0.1.0"
authors = ["Marime Gui <lepro.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 1
panic = "abort"
codegen-units = 1
lto = true
debug = true

[profile.release.build-override]
opt-level = 1

[dependencies]
linked_list_allocator = "0.8.6"
